# FastAPI_user_auth

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt
app/: pyproject.toml  script.sh
app/src/: alembic.ini  config.py  init_database.py  main.py  models.py  requirements.txt
app/src/alembic/versions/: 0364664ff8a3_create_blacklist_table.py  193876617957_create_codes_table.py  3b3624b70ff8_init.py  915c86385069_init.py  c3e2124165a0_create_otps_tables.py
app/src/auth/: crud.py  router.py  schema.py
app/src/database/: data_source_name.py
app/src/enums/: otp.py
app/src/exceptions/: business.py
app/src/otps/: crud.py  router.py  schema.py
app/src/users/: crud.py  router.py  schema.py
app/src/utils/: constant_util.py  crypto_util.py  email_util.py  jwt_util.py  otp_util.py
