[tool.poetry]
name = "school-api"
version = "0.0.1"
description = ""
authors = ["Betuple"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
asyncpg = "^0.25.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
