[tool.poetry]
name = "betuple-api"
version = "0.0.1"
description = ""
authors = ["Cooleekova"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
asyncpg = "^0.25.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
alembic = "^1.8.1"
passlib = "^1.7.4"
PyJWT = "^2.4.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
